Project payroll_compliance {
  database_type: 'PostgreSQL'
  Note: 'Physical data model package for payroll compliance domain.'
}

Table tenant {
  tenant_id uuid [pk]
  name text [not null]
  timezone text [not null]
  status status_generic [not null]
}

Table legal_entity {
  legal_entity_id uuid [pk]
  tenant_id uuid [not null, ref: > tenant.tenant_id]
  name text [not null]
  kvk_number text
  entity_type text [not null]
  active_from date [not null]
  active_to date
}

Table client {
  client_id uuid [pk]
  tenant_id uuid [not null, ref: > tenant.tenant_id]
  legal_entity_id uuid [ref: > legal_entity.legal_entity_id]
  client_code text [not null]
  name text [not null]
  cao_name text
  cao_version text
  status status_generic [not null]
}

Table worker {
  worker_id uuid [pk]
  tenant_id uuid [not null, ref: > tenant.tenant_id]
  worker_no text [not null]
  first_name text [not null]
  last_name text [not null]
  birth_date date
  bsn_token text
  status status_generic [not null]
}

Table employment_contract {
  contract_id uuid [pk]
  worker_id uuid [not null, ref: > worker.worker_id]
  legal_entity_id uuid [not null, ref: > legal_entity.legal_entity_id]
  contract_regime text
  contract_form text
  start_date date [not null]
  end_date date
  status status_generic [not null]
}

Table client_job_profile {
  client_job_profile_id uuid [pk]
  client_id uuid [not null, ref: > client.client_id]
  job_code_client text [not null]
  title text [not null]
  job_family text
  job_level text
  effective_from date [not null]
  effective_to date
}

Table client_package {
  client_package_id uuid [pk]
  client_id uuid [not null, ref: > client.client_id]
  client_job_profile_id uuid [not null, ref: > client_job_profile.client_job_profile_id]
  package_name text [not null]
  source_type text [not null]
  effective_from date [not null]
  effective_to date
  verification_status verification_status [not null]
}

Table compensation_component_type {
  component_type_id uuid [pk]
  code text [unique, not null]
  name text [not null]
  category text [not null]
  valuation_method text [not null]
}

Table client_package_component {
  package_component_id uuid [pk]
  client_package_id uuid [not null, ref: > client_package.client_package_id]
  component_type_id uuid [not null, ref: > compensation_component_type.component_type_id]
  component_code text [not null]
  value_type text [not null]
  value_amount numeric
  value_percent numeric
  unit_code text
  effective_from date [not null]
  effective_to date
}

Table assignment {
  assignment_id uuid [pk]
  worker_id uuid [not null, ref: > worker.worker_id]
  client_id uuid [not null, ref: > client.client_id]
  site_id uuid [ref: > client_site.site_id]
  contract_id uuid [ref: > employment_contract.contract_id]
  supplier_legal_entity_id uuid [not null, ref: > legal_entity.legal_entity_id]
  client_job_profile_id uuid [not null, ref: > client_job_profile.client_job_profile_id]
  start_date date [not null]
  end_date date
  planned_hours_per_week numeric
  status status_generic [not null]
}

Table client_site {
  site_id uuid [pk]
  client_id uuid [not null, ref: > client.client_id]
  name text [not null]
  cost_center_code text
  status status_generic [not null]
}

Table timesheet {
  timesheet_id uuid [pk]
  assignment_id uuid [not null, ref: > assignment.assignment_id]
  period_start date [not null]
  period_end date [not null]
  status status_generic [not null]
}

Table time_entry {
  time_entry_id uuid [pk]
  timesheet_id uuid [not null, ref: > timesheet.timesheet_id]
  work_date date [not null]
  hours_worked numeric [not null]
  hours_type text [not null]
}

Table payroll_period {
  payroll_period_id uuid [pk]
  tenant_id uuid [not null, ref: > tenant.tenant_id]
  period_code text [not null]
  date_from date [not null]
  date_to date [not null]
  pay_date date [not null]
  status status_generic [not null]
}

Table payroll_run {
  payroll_run_id uuid [pk]
  payroll_period_id uuid [not null, ref: > payroll_period.payroll_period_id]
  run_type payroll_run_type [not null]
  status status_generic [not null]
}

Table payroll_result {
  payroll_result_id uuid [pk]
  assignment_id uuid [not null, ref: > assignment.assignment_id]
  payroll_run_id uuid [not null, ref: > payroll_run.payroll_run_id]
  gross_amount numeric [not null]
  net_amount numeric [not null]
  employer_cost numeric [not null]
  result_status status_generic [not null]
}

Table pay_line {
  pay_line_id uuid [pk]
  payroll_result_id uuid [not null, ref: > payroll_result.payroll_result_id]
  line_type text [not null]
  component_code text [not null]
  amount numeric [not null]
}
